--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,83 @@
   margin: 0 auto;
   text-align: center;
 }
+
+.container {
+  margin-top: 2rem;
+  max-width: 1200px;
+
+}
+
+.content {
+  margin: 2rem auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.content h6 {
+  overflow-wrap: break-word;
+  hyphens: auto;
+  max-width: 200px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  margin: 2rem;
+}
+
+.content-img {
+  width: 5rem;
+  margin: 1rem;
+}
+
+.content-link {
+  text-decoration: none;
+  color: #222222
+}
+.content-link:hover {
+  color: #5f5f5f
+}
+/* ======DETAILS======= */
+
+.detail-container {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+}
+.detail-content{
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-wrap: break-word;
+  hyphens: auto;
+  max-width: 250px;
+}
+
+.detail-info {
+  padding: 2rem;
+  text-align: left;
+  border-left: 1px solid rgb(104, 104, 104);
+}
+
+button {
+  background-color: #f3f3f3;
+  color: #222222;
+  border: none;
+  padding: 16px 32px;
+  margin: 1rem;
+  border-radius: 5px;
+}
+
+button a {
+  text-decoration: none;
+  color: #222222;
+}
+
+button:hover {
+  background-color: #e9e9e9;
+}
+
